--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
 spring.jpa.hibernate.ddl-auto=update
+springdoc.swagger-ui.path=/swagger-ui.html
